2000-10-09  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c: (PrependOneURIToList),
	(non_recursive_empty_directory), (remove_directory),
	(gnome_vfs_xfer_empty_trash):
	work on 825 - Inability to empty Trash after trashing a deeply
	nested directory. Added a fallback call that builds a uri list
	first without keeping directory file descriptors opened.

2000-10-09  Glynn Foster  <glynn.foster@sun.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-utils.c: (istr_has_prefix),
	(gnome_vfs_get_volume_free_space):
	Added Solaris-specific changes to needed for getting the
	free volume space.

2000-10-09  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped the version to 0.3.1.0 as 0.3.1 has already been
	released many moons ago

2000-10-05  Mike Fleming  <mfleming@eazel.com>

	* modules/http-method.c: (http_proxy_for_host_port),
	(vfs_module_init):

	When HTTP proxy is enabled, proxy is explicitly bypassed for "localhost"
	and "127.x.x.x.".  We'd like to have a general configuration mechanism for
	non-proxy URL's in the future.  This was causing bugzilla.eazel.com 3492

	Also fixed some debug messages to work with the new gconf
	
2000-10-05  Ramiro Estrugo  <ramiro@eazel.com>

	* modules/http-method.c: (vfs_module_init):
	Workaround a bug in gconf by not preloading a directory that is
	monitored. 
	
2000-10-04  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-utils.c:
	Move includes around to unbreak the build on Linux.

2000-09-21  Chris Toshok  <toshok@helixcode.com>

	* configure.in: add checks for sys/vfs.h and sys/mount.h

	* libgnomevfs/gnome-vfs-utils.c: sys/vfs.h doesn't exist on some
	systems, so wrap #if HAVE_SYS_VFS_H.  if there's no sys/vfs.h, try
	sys/mount.h.  also, include sys/param.h if it's available (since
	including sys/mount.h on freebsd without first including
	sys/param.h breaks, at least in some versions of 4.x.)

2000-10-04  Ramiro Estrugo  <ramiro@eazel.com>

	* acconfig.h:
	* configure.in: